# slam_mplugin

./: .gitignore  CMakeLists.txt  README.md  mico-slam-config.cmake.in
cmake/templates/: mico-slam-config.cmake.in
include/mico/slam/: BundleAdjuster.h  BundleAdjuster.inl  BundleAdjusterCvsba.h  BundleAdjusterCvsba.inl  BundleAdjusterRos.h  BundleAdjusterRos.inl  BundleAdjuster_g2o.h  BundleAdjuster_g2o.inl  DatabaseMarkI.h  DatabaseMarkI.inl  Dataframe.h  Dataframe.inl  GMMEM.h  GMMEM.inl  LoopClosureDetector.h  LoopClosureDetector.inl  LoopClosureDetectorDorian.h  LoopClosureDetectorDorian.inl  Odometry.h  OdometryPhotogrammetry.h  OdometryPhotogrammetry.inl  OdometryRgbd.h  OdometryRgbd.inl  RansacP2P.h  RansacP2P.inl  SceneVisualizer.h  SceneVisualizer.inl  Word.h  Word.inl  msca.h  msca.inl  utils2d.h  utils3d.h  utils3d.inl
include/mico/slam/cvsba/: cvsba.h
include/mico/slam/flow/: BlockQueuer.h  CastBlocks.h
include/mico/slam/flow/misc/: BlockDataframeInspector.h  BlockPython.h  BlocksUtils2D.h  BlocksUtils3D.h  InterfaceSelectorWidget.h
include/mico/slam/flow/misc/impl/: DataframeVisualizer.h
include/mico/slam/flow/processors/: BlockDarknet.h  BlockDatabaseMarkI.h  BlockEntityDatabase.h  BlockLoopClosure.h  BlockOdometryPhotogrammetry.h  BlockOdometryRGBD.h  BlockOptimizerCF.h
include/mico/slam/flow/savers/: SaverEntity.h  SaverImage.h  SaverTrajectory.h
include/mico/slam/utils/: LogManager.h
scripts/: install_dependencies.sh  install_dependencies_ci.sh
src/slam/: utils2d.cpp
src/slam/cjson/: json.cpp  parser.cpp  serializer.cpp
src/slam/cvsba/: cvsba.cpp  sba_chkjac.c  sba_crsm.c  sba_lapack.c  sba_levmar.c  sba_levmar.c.trytoparallelize  sba_levmar_wrap.c
src/slam/flow/: CastBlocks.cpp  flow_factory.cpp
src/slam/flow/misc/: BlockDataframeInspector.cpp  BlockPython.cpp  BlocksUtils2D.cpp  BlocksUtils3D.cpp  InterfaceSelectorWidget.cpp
src/slam/flow/misc/impl/: DataframeVisualizer.cpp
src/slam/flow/misc/python/: ConversionUtils.cpp  PythonSyntaxHighlighter.cpp
src/slam/flow/processors/: BlockDarknet.cpp  BlockDatabaseMarkI.cpp  BlockEntityDatabase.cpp  BlockLoopClosure.cpp  BlockOdometryPhotogrammetry.cpp  BlockOdometryRGBD.cpp  BlockOptimizerCF.cpp
src/slam/flow/savers/: SaverEntity.cpp  SaverImage.cpp  SaverTrajectory.cpp
src/slam/utils/: LogManager.cpp
src/slam/utils/flow/: type_registration.cpp
